--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=
-spring.data.mongodb.password=
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
