--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,14 @@
     <description>Order matching simulator</description>
 
     <properties>
-        <java.version>14</java.version>
+        <java.version>13</java.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
