--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
